# LLms-Bedrock-POC

./: .gitignore  2025-11-21 11_19am (2).csv  BACKEND_SUMMARY.md  FRONTEND_SUMMARY.md  UPDATED_PROJECT_TIMELINE.md  views.sql
column-lineage-api/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONVENTIONS.md  DEPENDENCY_MANAGEMENT.md  Dockerfile  INTEGRATION_SUMMARY.md  PAGINATION_REMOVAL_SUMMARY.md  README.md  RESTART_AND_TEST.md  buildspec.yml  debug_columns.py  debug_views_discovery.py  entrypoint.sh  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  sql_qury_fix.sql  test_analysis_endpoint.py  test_api_curl.py  test_api_endpoints.py  test_database_fix.py  test_fixed_analysis.py  test_simple_api.py  test_snowflake_connection.py  test_sql_fix.py  test_sync_analysis.py  test_view_exists.py
column-lineage-api/api/: __init__.py  main.py
column-lineage-api/api/core/: config.py  log_config.py  logging.py
column-lineage-api/api/core/analysis/: __init__.py  integrated_parser.py  main.py
column-lineage-api/api/dependencies/: __init__.py  auth.py  database.py  database_connection.py
column-lineage-api/api/health/: __init__.py  healthcheck.py
column-lineage-api/api/v1/models/: __init__.py  lineage.py
column-lineage-api/api/v1/routers/: lineage.py
column-lineage-api/api/v1/services/: __init__.py  background_executor.py  job_logger.py  job_manager.py  lineage_service.py  sql_parser.py
column-lineage-api/tests/: __init__.py  conftest.py  test_health.py  test_lineage_api.py
column-lineage-frontend/: .env.example  .env.template  AWS_COGNITO_SETUP.md  Dockerfile  QUICK_SETUP.md  README.md  buildspec.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  test-jobs-api.js  vite.config.ts  vitest.config.ts
column-lineage-frontend/amplify/: team-provider-info.json
column-lineage-frontend/amplify/backend/: backend-config.json
column-lineage-frontend/scripts/: validate-config.js
column-lineage-frontend/src/: App.tsx  index.css  main.tsx  polyfills.ts
column-lineage-frontend/src/api/: baseViewService.ts  client.ts  health.ts  index.ts  lineage.ts  lineageService.ts  users.ts
column-lineage-frontend/src/domain/: Users.ts
column-lineage-frontend/src/hooks/: useBaseView.ts
column-lineage-frontend/src/pages/: DashboardPage.tsx
column-lineage-frontend/src/test/: setupTests.ts
column-lineage-frontend/src/theme/: theme.tsx
column-lineage-frontend/src/types/: api.ts  environment.d.ts  (+1 more)
views-to-table-column-lineage/: VIEW_TO_SOURCE_COLUMN_LINEAGE_V.sql  column_lineage_analysis.csv  config.py  init.py  main.py
(+19 files in other folders)
